--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,4 +1,4 @@
-<% (typeof error !== 'undefined') { %> <% errors.forEach(function(error) { %>
+<% if(typeof errors !== 'undefined') { %> <% errors.forEach(function(error) { %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
       <%= error.msg %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -26,9 +26,9 @@
     </div>
 <% } %> 
     
-<% if(error != ''){ %>
+<% if(messages.error != ''){ %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      <%= error %>
+      <%= errors %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
