--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -26,9 +26,9 @@
     </div>
 <% } %> 
     
-<% if(messages.error != ''){ %>
+<% if(error != ''){ %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      <%= errors %>
+      <%= error %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
